--- a/orchid-backend/package.json
+++ b/orchid-backend/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "i": "^0.3.7",
