--- a/orchid-backend/package.json
+++ b/orchid-backend/package.json
@@ -21,6 +21,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "slugify": "^1.6.6"
   }
 }
