--- a/cms-backend/package.json
+++ b/cms-backend/package.json
@@ -15,9 +15,10 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@strapi/admin": "^5.30.1",
     "@strapi/plugin-cloud": "5.26.0",
     "@strapi/plugin-users-permissions": "5.26.0",
-    "@strapi/strapi": "5.26.0",
+    "@strapi/strapi": "^5.30.1",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
