--- a/orchid-backend/package.json
+++ b/orchid-backend/package.json
@@ -12,17 +12,23 @@
   "type": "module",
   "description": "",
   "dependencies": {
-    "axios": "^1.13.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
+    "bull": "^4.16.5",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "i": "^0.3.7",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
     "multer": "^2.0.2",
+    "nanoid": "^5.1.6",
+    "openai": "^6.8.1",
     "slugify": "^1.6.6"
   }
 }
